<resources>
    <string name="app_name">MRUTrader</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_register_">Register_Activity</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="add_course">Add Course</string>
    <string name="course_name">Course Name</string>
    <string name="textbook">Textbook</string>
    <string name="lecture_notes">Lecture Notes</string>
    <string name="tutoring">Tutoring Services</string>
    <string name="free">Free</string>
    <string name="price">Price</string>
    <string name="sell">Sell</string>
    <string name="trade">Trade</string>
    <string name="both">Both</string>
    <string name="cancel">Cancel</string>
    <string name="delete_course">Delete Course</string>
    <string name="search_course">Search Course</string>
    <string name="search_title">Search Courses</string>
    <string name="search_hint">COMP3512</string>
    <string name="courses_taken">Courses Taken</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_results">Search Results</string>
    <string name="search_again">Search Again</string>
    <string name="view_course">View Course</string>
    <string name="chat">Chat</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="resend_verification_email">Resend Verificatin Email</string>
    <string name="sign_in">Sign in</string>
    <string name="email_registration">Email Registration</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
</resources>
