<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimageblue"
    tools:context="mrutrader.mrutrader.SearchFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button2"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:onClick="onClick"
        android:text="@string/search_course"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="71dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.888"
        tools:layout_editor_absoluteY="531dp" />

    <TableLayout

        android:id="@+id/tableLayout"
        android:layout_width="439dp"
        android:layout_height="520dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="2dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@android:color/background_light"
                android:textSize="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <SearchView
                android:id="@+id/searchView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundTint="@android:color/background_light"
                android:iconifiedByDefault="false"
                app:iconifiedByDefault="false" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/listView1"
                android:layout_width="378dp"
                android:layout_height="320dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:choiceMode="singleChoice"

                android:listSelector="?android:attr/textColorHintInverse"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addCourseButton"
                app:layout_constraintVertical_bias="0.346" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/tutorRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_action_tutor"
                android:paddingRight="30dp"
                android:text="@string/tutoring"
                android:textColor="@android:color/background_light"
                app:buttonTint="@android:color/background_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/notesRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_action_notes_new"
                android:paddingRight="25dp"
                android:text="@string/lecture_notes"
                android:textColor="@android:color/background_light"
                app:buttonTint="@android:color/background_light" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/textbookRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_action_textbook"
                android:paddingRight="25dp"
                android:text="@string/textbook"
                android:textColor="@android:color/background_light"
                app:buttonTint="@android:color/background_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/tradeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_action_trade"
                android:paddingRight="25dp"
                android:text="@string/trade"
                android:textColor="@android:color/background_light"
                app:buttonTint="@android:color/background_light" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
